--- a/pages/mine/index.wxss
+++ b/pages/mine/index.wxss
@@ -1,8 +1,56 @@
 /* index.wxss */
 
-.baners image {
+.top {
+  background: #d1141b;
   width: 100%;
-  height: 53.3333vw;
+  padding: 60rpx 45rpx;
+  line-height: 145rpx;
+  height: 145rpx;
+}
+
+.top image {
+  width: 145rpx;
+  height: 145rpx;
+  border-radius: 70rpx;
+  display: block;
+  float: left;
+}
+
+.top .name {
+  font-size: 44rpx;
+  color: #fff;
+  letter-spacing: 0;
+  line-height: 145rpx;
+  padding-left: 40rpx;
+  float: left;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.bind {
+  width: 710rpx;
+  line-height: 120rpx;
+  height: 120rpx;
+  background: #fff;
+  border-radius: 8rpx;
+  font-size: 32rpx;
+  text-indent: 30rpx;
+  color: #d1141b;
+  position: relative;
+  left: 50%;
+  margin-left: -355rpx;
+  top: -30rpx;
+  font-weight: 600;
+}
+
+.fast-nav {
+  width: 710rpx;
+  background: #fff;
+  border-radius: 4rpx;
+  margin: 0 auto;
+  height: 552rpx;
 }
 
 .fast-nav image {
@@ -12,16 +60,51 @@
   margin-right: 20rpx;
 }
 
-.fast-nav .list-item{
-   padding: 20rpx;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   line-height: 44rpx;
-   border-bottom: 1px solid #eee;
-   font-size: 0.9rem;
+.fast-nav .list-item {
+  padding: 20rpx;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 44rpx;
+  border-bottom: 1px solid #efeef3;
+  font-size: 32rpx;
+  color: #4a4a4a;
+  letter-spacing: 1px;
+  height: 66rpx;
+}
+
+.left-img {
+  width: 44rpx;
+  height: 44rpx;
+  vertical-align: middle;
 }
 
 .navigator-hover {
   background: #eee;
+}
+
+.message {
+  width: 710rpx;
+  margin: 20rpx auto 0;
+  height: 100rpx;
+  padding: 30rpx;
+  background: #fff;
+  border-radius: 4rpx;
+}
+
+.message view {
+  font-size: 22rpx;
+  color: #aeaeae;
+  letter-spacing: 0;
+  text-align: center;
+  margin-bottom: 10rpx;
+}
+
+.tel{
+  float: left;
+color: #D1141B;
+  
+}
+.tips{
+  float: right;
 }
