--- a/pages/products/index.wxss
+++ b/pages/products/index.wxss
@@ -74,10 +74,12 @@
 .pro-list {
   padding: 10rpx 30rpx;
 }
-.pro-item{
-  margin-top:20rpx;
+
+.pro-item {
+  margin-top: 20rpx;
   height: 158rpx;
 }
+
 .pro-item .left {
   width: 250rpx;
   height: 158rpx;
@@ -108,8 +110,7 @@
   font-size: 28rpx;
   color: #6a6a6a;
   letter-spacing: 0.88px;
-  margin:14rpx 0;
-
+  margin: 14rpx 0;
 }
 
 .pro-item .right .pro-btn {
@@ -124,6 +125,7 @@
 }
 
 /* 模态框 */
+
 .modal-mask {
   width: 100%;
   height: 100%;
@@ -136,8 +138,9 @@
   z-index: 9000;
   color: #fff;
 }
+
 .modal-dialog {
-  width: 700rpx;
+  width: 640rpx;
   overflow: hidden;
   position: fixed;
   top: 10%;
@@ -147,20 +150,56 @@
   border-radius: 10rpx;
   padding: 60rpx 30rpx;
 }
-.intro{
 
+.intro {
 }
-.intro .img{
+
+.intro .img {
   float: left;
 }
-.intro .img image{
+
+.intro .img image {
   width: 188rpx;
   height: 250rpx;
 }
 
-.intr-right{
+.intr-right {
   float: left;
   height: 250rpx;
   width: 413rpx;
   overflow: hidden;
+  padding-left: 30rpx;
+}
+
+.intr-right .intr-name .name {
+  font-size: 36rpx;
+  color: #000;
+  letter-spacing: 1.12px;
+  font-weight: 600;
+}
+
+.nick-name {
+  font-size: 28rpx;
+  color: #000;
+  letter-spacing: 0.88px;
+  margin-left: 25rpx;
+}
+.goods{
+  clear:both;
+  padding-top: 1rpx;
+}
+.intr-tit {
+  font-size: 26rpx;
+  color: #d1141b;
+  letter-spacing: 0.81px;
+  text-align: justify;
+  line-height: 34rpx;
+  margin: 40rpx 0 20rpx;
+}
+
+.intr-des {
+  font-size: 24rpx;
+  color: #3b3b3b;
+  letter-spacing: 0.75px;
+  text-align: justify;
 }
